// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SyncLoopHook > call empty 1`] = `undefined`;

exports[`SyncLoopHook > call empty 2`] = `undefined`;

exports[`SyncLoopHook > call empty 3`] = `
[
  [
    "count: ",
    3,
  ],
  [
    "count: ",
    2,
  ],
  [
    "count: ",
    1,
  ],
]
`;

exports[`SyncLoopHook > call empty 4`] = `
[
  [
    "count: ",
    3,
  ],
  [
    "count: ",
    2,
  ],
  [
    "count: ",
    1,
  ],
]
`;

exports[`SyncLoopHook > call multi 1`] = `undefined`;

exports[`SyncLoopHook > call multi 2`] = `undefined`;

exports[`SyncLoopHook > call multi 3`] = `
[
  [
    "hooks",
    0,
  ],
  [
    "count: ",
    3,
  ],
  [
    "hooks",
    0,
  ],
  [
    "count: ",
    2,
  ],
  [
    "hooks",
    0,
  ],
  [
    "count: ",
    1,
  ],
]
`;

exports[`SyncLoopHook > call multi 4`] = `
[
  [
    "hooks",
    0,
  ],
  [
    "count: ",
    3,
  ],
  [
    "hooks",
    0,
  ],
  [
    "count: ",
    2,
  ],
  [
    "hooks",
    0,
  ],
  [
    "count: ",
    1,
  ],
]
`;

exports[`SyncLoopHook > call single 1`] = `undefined`;

exports[`SyncLoopHook > call single 2`] = `undefined`;

exports[`SyncLoopHook > call single 3`] = `
[
  [
    "hooks",
  ],
  [
    "count: ",
    3,
  ],
  [
    "hooks",
  ],
  [
    "count: ",
    2,
  ],
  [
    "hooks",
  ],
  [
    "count: ",
    1,
  ],
]
`;

exports[`SyncLoopHook > call single 4`] = `
[
  [
    "hooks",
  ],
  [
    "count: ",
    3,
  ],
  [
    "hooks",
  ],
  [
    "count: ",
    2,
  ],
  [
    "hooks",
  ],
  [
    "count: ",
    1,
  ],
]
`;
